Updated sign up form

--- a/backend/app/templates/signinform.html
+++ b/backend/app/templates/signinform.html
@@ -18,4 +18,4 @@
         </div>
     </div>
 </form>
-<img src="../../static/images/undraw_outer_space_re_u9vd.svg" 
+<img src="../../static/images/undraw_outer_space_re_u9vd.svg">
