--- a/backend/app/templates/signupform.html
+++ b/backend/app/templates/signupform.html
@@ -1,4 +1,5 @@
-<form method="POST">
+<form method="POST" action="https://final-project-flask.onrender.com/signup">
+
     {{ form.hidden_tag() }}
     
     <div class="form-group">
